...
    "tabs": {
        "orders": "Orders",
        "clients": "Clients",
        "visits": "Visits"
    },
    "orders": {
        "title": "My orders",
        "no_orders": "You have not placed any orders yet.",
        "delivery": "Scheduled delivery: ",
        "truck": "Assigned truck: ",
        "products": "Products"
    },
    "new_order": {
        "title": "Create order",
        "availabes": "availabes",
        "availabe": "availabe",
        "empty_state": "No products available",
        "add_button": "Add",
        "expiry": "Expires: ",
        "success_order": "Order created successfully.",
        "error_order": "An error occurred while creating the order. Please try again later."
    },
    "order_summary": {
        "title": "Order summary",
...
